2006-05-09  Keith Goodman  <kwgoodman@gmail.com>

	* DLD-FUNCTIONS/rand.cc: Doc string fix.

2006-05-09  Jorge Barros de Abreu  <ficmatin01@solar.com.br>

	* data.cc (FInf, FNaN): Fix typo in doc string.

2006-05-08  John W. Eaton  <jwe@octave.org>

	* Makefile.in (DEFUN_PATTERN): Match DEFUNX_DLD.
	* mkbuiltins: Handle XDEFUNX_DLD_INTERNAL.
	* mkgendoc: Likewise.
	* mk-pkg-add: Likewise.  Do all the matching with sed.
	* defun-int.h 	(DEFINE_FUNX_INSTALLER_FUN, DEFINE_FUNX_INSTALLER_FUN2,
	DEFINE_FUNX_INSTALLER_FUN3): New macros.
	(DEFINE_FUN_INSTALLER_FUN3): Define using DEFINE_FUNX_INSTALLER_FUN3.
	(DEFUNX_DLD_INTERNAL): New macro.
	* defun-dld.h (DEFUNX_DLD): New macro.

	* DLD-FUNCTIONS/__gnuplot_raw__.l: Mark __gnuplot_set__ as a
	command, not a rawcommand.

	* load-save.cc: No need to handle built-in variables.
	* help.cc (simple_help): No need to handle built-in variables.

	* variables.cc (is_builtin_variable, builtin_string_variable,
	builtin_real_scalar_variable, builtin_any_variable):
	Delete functions.
	(Fexist, Fdocument, do_who, Fwho, link_to_builtin_or_function): 
	No need to handle built-in variables.
	* variables.h (is_builtin_variable, builtin_string_variable,
	builtin_real_scalar_variable, builtin_any_variable): Delete decls.

	* symtab.h (symbol_record::symbol_def::is_builtin_variable,
	symbol_record::is_builtin_variable): Delete.
	(symbol_record::TYPE): Remove BUILTIN_VARIABLE from enum.
	(symbol_record::symbol_def::is_variable, SYMTAB_ALL_TYPES,
	SYMTAB_VARIABLES): No need to handle built-in variables now.
	(symbol_record::define_builtin_variable,
	symbol_record::link_to_builtin_variable): Delete decls.
	* symtab.cc (record::define, SYMBOL_DEF::type,
	SYMBOL_DEF::type_as_string): No need to handle built-in variables.
	(symbol_record::define_builtin_variable): Delete.
	(symbol_record::variable_reference): No need to attemp to link to
	built-in variable.

	* utils.cc (check_preference, warn_old_style_preference): Delete.